# mlops

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.airflow  README.md  docker-compose.yaml  dvc.yaml  pyproject.toml  requirements.txt
.github/workflows/: cml.yaml  main.yaml
config/: config.yaml
config/hpo/: optuna.yaml  random.yaml
config/model/: logistic_regression.yaml
dags/: ml_training_pipeline.py
data/: .gitignore
models/hpo/random/: best_model.joblib
models/hpo/tpe/: best_model.joblib
notebooks/: analysis.ipynb
reports/hpo/random/: best_params.json  metrics.json
reports/hpo/tpe/: best_params.json  metrics.json
src/: optimize.py  prepare.py  train.py
src/experiments/: train_mlflow.py
src/stages/: __init__.py  prepare.py  register.py  train.py
tests/: test_dag.py  test_model.py  test_posttrain.py  test_pretrain.py
tests/fixtures/: sample_dataset.csv
