[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "black>=26.3.1",
    "dvc>=3.66.1",
    "flake8>=7.3.0",
    "hydra-core>=1.3.2",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "matplotlib-inline>=0.2.1",
    "mlflow>=2.20.2",
    "numpy>=2.2.3",
    "optuna>=4.2.1",
    "pandas>=2.2.3,<3",
    "pytest>=9.0.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
